<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingBottom="15dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/settings_general"
            android:textColor="@color/black" />


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:minHeight="60dp"
            card_view:cardCornerRadius="2dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/settings_label1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_autochange_title"
                    android:textColor="@color/text_color_primary" />

                <TextView
                    android:id="@+id/settings_label2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/settings_label1"
                    android:text="@string/settings_autochange_desc"
                    android:textColor="@color/text_color_secondary" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:minHeight="60dp"
            card_view:cardCornerRadius="2dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/settings_label3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_frequency_title"
                    android:textColor="@color/text_color_primary" />

                <TextView
                    android:id="@+id/settings_label4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/settings_label3"
                    android:text="@string/settings_frequency_desc"
                    android:textColor="@color/text_color_secondary" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:minHeight="60dp"
            card_view:cardCornerRadius="2dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/settings_label5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_network_title"
                    android:textColor="@color/text_color_primary" />

                <TextView
                    android:id="@+id/settings_label6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/settings_label5"
                    android:text="@string/settings_network_desc"
                    android:textColor="@color/text_color_secondary" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:minHeight="60dp"
            card_view:cardCornerRadius="2dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/settings_label7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_categories_title"
                    android:textColor="@color/text_color_primary" />

                <TextView
                    android:id="@+id/settings_label8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/settings_label7"
                    android:text="@string/settings_categories_desc"
                    android:textColor="@color/text_color_secondary" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_arrow_right" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/settings_about"
            android:textColor="@color/black" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:minHeight="60dp"
            card_view:cardCornerRadius="2dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/settings_label9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_adfree_title"
                    android:textColor="@color/text_color_primary" />

                <TextView
                    android:id="@+id/settings_label10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/settings_label9"
                    android:text="@string/settings_adfree_desc"
                    android:textColor="@color/text_color_secondary" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_arrow_right" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:minHeight="60dp"
            card_view:cardCornerRadius="2dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/settings_label11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_recommend_title"
                    android:textColor="@color/text_color_primary" />

                <TextView
                    android:id="@+id/settings_label12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/settings_label11"
                    android:text="@string/settings_recommend_desc"
                    android:textColor="@color/text_color_secondary" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_arrow_right" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:minHeight="60dp"
            card_view:cardCornerRadius="2dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/settings_label13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_rate_title"
                    android:textColor="@color/text_color_primary" />

                <TextView
                    android:id="@+id/settings_label14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/settings_label13"
                    android:text="@string/settings_rate_desc"
                    android:textColor="@color/text_color_secondary" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_arrow_right" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:minHeight="60dp"
            card_view:cardCornerRadius="2dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/settings_label15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_feedback_title"
                    android:textColor="@color/text_color_primary" />

                <TextView
                    android:id="@+id/settings_label16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/settings_label15"
                    android:text="@string/settings_feedback_desc"
                    android:textColor="@color/text_color_secondary" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_arrow_right" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:minHeight="60dp"
            card_view:cardCornerRadius="2dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/settings_label17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_about_title"
                    android:textColor="@color/text_color_primary" />

                <TextView
                    android:id="@+id/settings_label18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/settings_label17"
                    android:text="@string/settings_about_desc"
                    android:textColor="@color/text_color_secondary" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_arrow_right" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>